# Pulse

./: AGENTS.md  Broker.toml  CLAUDE.md  Cargo.toml  README.md  TODO.md  broker.toml  dist-workspace.toml
benchmark/: README.md  run.py
src/: broker.rs  main.rs  protocol.rs  settings.rs  tls.rs
src/broker/: delivery.rs  handler.rs  life.rs  mod.rs  state.rs  tests.rs
src/broker/runtime/: auth.rs  config.rs  memory.rs  message.rs  mod.rs  reason.rs  time.rs  write.rs
src/broker/runtime/connection/: connect.rs  handler.rs  ids.rs  life.rs  mod.rs  session.rs  topic_alias.rs  websocket.rs
src/broker/runtime/delivery/: flush.rs  inflight.rs  mod.rs  offline_queue.rs  packet.rs  retained.rs  router.rs  service.rs
src/broker/runtime/retained_store/: mod.rs
src/broker/runtime/session_registry/: mod.rs
src/broker/runtime/subscription_tree/: mod.rs  service.rs  shared.rs
src/broker/storage/: binary.rs  memory.rs  mod.rs  sqlite.rs
src/broker/storage/memory/: mod.rs
src/broker/storage/mysql/: codec.rs  mod.rs  schema.rs
src/broker/storage/sqlite/: mod.rs  schema.rs
src/broker/vnext/: durable_log.rs  mod.rs  routing.rs  session.rs  shard.rs
src/observability/: logging.rs  metrics.rs  mod.rs
wix/: main.wxs
