[package]
name = "mqtt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
rs-netty = "0.2.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
