[package]
name = "Pulse"
version = "1.0.5"
edition = "2024"
authors = ["FAll"]
repository = "https://github.com/PieceOfFall/Pulse"

[package.metadata.wix]
upgrade-guid = "843208C9-19E0-4573-B63B-EF0F7AA040EE"
path-guid = "574F7137-703D-42E2-860C-107E5161752A"
license = false
eula = false

[dependencies]
bytes = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
mysql = "28"
rs-netty = "0.2.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
